@@ -1,24 +1,8 @@
 /*
- * JBoss, Home of Professional Open Source.
- * Copyright 2017, Red Hat, Inc., and individual contributors
- * as indicated by the @author tags. See the copyright.txt file in the
- * distribution for a full listing of individual contributors.
- *
- * This is free software; you can redistribute it and/or modify it
- * under the terms of the GNU Lesser General Public License as
- * published by the Free Software Foundation; either version 2.1 of
- * the License, or (at your option) any later version.
- *
- * This software is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
- * Lesser General Public License for more details.
- *
- * You should have received a copy of the GNU Lesser General Public
- * License along with this software; if not, write to the Free
- * Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
- * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
+   Copyright The Narayana Authors
+   SPDX-License-Identifier: Apache-2.0
  */
+
 package io.narayana.lra.coordinator.domain.model;
 
 import com.arjuna.ats.arjuna.common.Uid;
@@ -38,15 +22,16 @@ import com.arjuna.ats.arjuna.state.OutputObjectState;
 import io.narayana.lra.coordinator.domain.service.LRAService;
 import org.eclipse.microprofile.lra.annotation.LRAStatus;
 
-import javax.ws.rs.WebApplicationException;
-import javax.ws.rs.core.Response;
-import javax.ws.rs.core.Response.Status;
+import jakarta.ws.rs.WebApplicationException;
+import jakarta.ws.rs.core.Response;
+import jakarta.ws.rs.core.Response.Status;
 
 import java.io.IOException;
 import java.io.UnsupportedEncodingException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.time.Instant;
 import java.time.LocalDateTime;
 import java.time.ZoneOffset;
@@ -399,15 +384,15 @@ public class LongRunningAction extends BasicAction {
         }
     }
 
-    private int cancelLRA() {
-        return finishLRA(true);
-    }
-
     protected ReentrantLock tryLockTransaction() {
         return lraService.tryLockTransaction(getId());
     }
 
     public int finishLRA(boolean cancel) {
+        return finishLRA(cancel, null, null);
+    }
+
+    public int finishLRA(boolean cancel, String compensator, String userData) {
         ReentrantLock lock = null;
 
         // check whether the transaction should cancel due to a timeout:
@@ -428,6 +413,10 @@ public class LongRunningAction extends BasicAction {
                 }
 
                 return status();
+            }
+
+            if (userData != null && !userData.isEmpty() && compensator != null && !compensator.isEmpty()) {
+                updateCompensatorUserData(compensator, userData);
             }
 
             if (status == LRAStatus.Cancelling) {
@@ -681,6 +670,7 @@ public class LongRunningAction extends BasicAction {
         LRAParticipantRecord participant = findLRAParticipant(participantUrl, false);
 
         if (participant != null) {
+            participant.setCompensatorData(compensatorData);
             return participant; // must have already been enlisted
         }
 
@@ -697,11 +687,11 @@ public class LongRunningAction extends BasicAction {
     }
 
     private LRAParticipantRecord enlistParticipant(URI coordinatorUrl, String participantUrl, String recoveryUrlBase, String terminateUrl,
-                                                   long timeLimit, String compensatorData) throws UnsupportedEncodingException {
+                                                   long timeLimit, String compensatorData) {
         LRAParticipantRecord p = new LRAParticipantRecord(this, lraService, participantUrl, compensatorData);
         String pid = p.get_uid().fileStringForm();
 
-        String txId = URLEncoder.encode(coordinatorUrl.toASCIIString(), "UTF-8");
+        String txId = URLEncoder.encode(coordinatorUrl.toASCIIString(), StandardCharsets.UTF_8);
 
         p.setRecoveryURI(recoveryUrlBase, txId, pid);
 
@@ -722,6 +712,16 @@ public class LongRunningAction extends BasicAction {
         }
 
         return null;
+    }
+
+    private void updateCompensatorUserData(String compensator, String userData) {
+        LRAParticipantRecord participant = findLRAParticipant(compensator, false);
+
+        if (participant != null) {
+            participant.setCompensatorData(userData);
+        } else {
+            LRALogger.i18nLogger.warn_unknownParticipant(compensator);
+        }
     }
 
     public boolean forgetParticipant(String participantUrl) {
@@ -994,7 +994,7 @@ public class LongRunningAction extends BasicAction {
 
                     updateState(LRAStatus.Cancelling);
                     trace_progress("scheduledAbort fired");
-                    cancelLRA();
+                    finishLRA(true);
                 }
             } finally {
                 lock.unlock();
